# GameDevMath

./: CMake.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Notes/: CrossProduct.ora  DotProduct.ora  MatrizDeTransformacao.ora  SomaDeVetor.ora  SubatracaoDeVetor.ora
src/: Algebra.cpp  CMakeLists.txt  DummyLib.cpp  Game.cpp  Player.cpp  UnityMesh.cpp  main.cpp
src/include/: Algebra.hpp  Game.hpp  Player.hpp  UnityMesh.hpp
tests/: CMakeLists.txt  collision-test.cpp  localToWorld-test.cpp  looking-test.cpp  mesharea-test.cpp  polygon-test.cpp  reflect-test.cpp  turrent-test.cpp  turrentplacement-test.cpp  worldToLocal-test.cpp
